--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,16 +6,19 @@
   --lato: 'Lato', sans-serif;
   --opensans: 'Open Sans', sans-serif;
 }
+
 * {
   box-sizing: border-box;
   margin: 0px;
 }
+
 body {
   display: flex;
   flex-direction: column;
   line-height: 1.3;
   background-color: var(--lightgray);
 }
+
 header {
   display: flex;
   justify-content: space-between;
@@ -31,7 +34,7 @@ header h1 {
   padding: 20px 10px 20px 60px;
   color: #383838;
   font-family: var(--opensans);
-  font-size:2.5em;
+  font-size: 2.5em;
 }
 
 /* navigation menu */
@@ -41,6 +44,7 @@ nav ul {
   min-width: 300px;
   margin-right: 70px;
 }
+
 nav ul li {
   list-style: none;
   border-bottom: 4px solid #91cbcd;
@@ -49,17 +53,21 @@ nav ul li {
   font-family: var(--opensans);
   font-size: 1.3em;
 }
+
 nav a {
   color: var(--teal);
   font-weight: bold;
   text-decoration: none;
 }
+
 nav a:hover {
   color: #fff;
 }
+
 section {
   background-color: #fff;
 }
+
 .hero {
   height: 400px;
   width: 100%;
@@ -69,6 +77,7 @@ section {
   background-size: cover;
   position: relative;
 }
+
 .hero h2 {
   position: absolute;
   right: 100px;
@@ -86,7 +95,10 @@ main p {
   margin: 0 0 20px 0;
   line-height: 1.6em;
 }
-section.about, section.work, section.contact {
+
+section.about,
+section.work,
+section.contact {
   display: flex;
   padding: 20px;
 }
@@ -98,35 +110,44 @@ aside.menu {
   text-align: right;
   border-right: 5px solid #445976;
 }
+
 aside.menu h2 {
   font-family: var(--opensans);
   font-size: 3em;
   margin: 10px 0;
   overflow-wrap: break-word;
-  color:var(--darkblue);
+  color: var(--darkblue);
 }
+
 aside.menu h2 span {
   display: block;
 }
-.bio, .projects, .information {
+
+.bio,
+.projects,
+.information {
   flex: 80%;
   padding: 0 40px;
 }
 
 /* work section - projects */
 .projects section {
-  display:flex; flex-wrap:wrap;
-  width:100%;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
+
 .projects section a {
   transition: all 0.5s ease-out;
   text-decoration: none;
-  color:var(--black);
+  color: var(--black);
   filter: brightness(80%);
 }
+
 .projects section a:hover {
   filter: brightness(100%);
 }
+
 .projects section a span {
   background-color: var(--teal);
   display: block;
@@ -135,67 +156,95 @@ aside.menu h2 span {
   top: 25%;
   padding: 10px;
 }
+
 .projects section a.surf-report span {
   top: 71%;
   padding: 10px;
 }
+
 .projects section a span h3 {
   margin: 10px 0 5px 0;
   font-family: var(--opensans);
   font-size: 1.5em;
 }
+
 .projects section a span p {
   margin: 0px 0 10px 0;
 }
+
 .surf-report {
   flex: 0 0 100%;
   min-height: 400px;
 }
-.led-wall, .calculator, .pastel-puzzles, .run-buddy {
-  flex:48%;
+
+.led-wall,
+.calculator,
+.pastel-puzzles,
+.run-buddy {
+  flex: 48%;
   min-height: 160px;
 }
-.led-wall, .pastel-puzzles {
+
+.led-wall,
+.pastel-puzzles {
   margin-right: 20px;
 }
-.surf-report, .led-wall, .calculator, .pastel-puzzles, .run-buddy {
+
+.surf-report,
+.led-wall,
+.calculator,
+.pastel-puzzles,
+.run-buddy {
   border: 6px solid #91cbcd;
   margin-bottom: 20px;
 }
-.surf-report:hover, .led-wall:hover, .calculator:hover, .pastel-puzzles:hover, .run-buddy:hover {
+
+.surf-report:hover,
+.led-wall:hover,
+.calculator:hover,
+.pastel-puzzles:hover,
+.run-buddy:hover {
   border: 6px solid #91cbcd;
   margin-bottom: 20px;
 }
+
 .surf-report {
   background: url("../images/surf_waves.jpg") bottom;
 }
+
 .led-wall {
   background: url("../images/led_wall.jpg") bottom;
 }
+
 .calculator {
   background: url("../images/calculator.jpg") bottom;
 }
+
 .pastel-puzzles {
   background: url("../images/pastel_puzzels.jpg") top;
 }
+
 .run-buddy {
   background: url("../images/run_buddy.jpg") top;
 }
+
 .information ul {
   display: flex;
   justify-content: space-between;
   padding: 50px;
 }
+
 .information ul li {
   list-style: none;
   border-bottom: 3px solid #445976;
   padding: 5px;
 }
+
 .information ul li a {
   text-decoration: none;
   color: var(--darkblue);
   font-family: var(--opensans);
-  font-size:1.2em;
+  font-size: 1.2em;
 }
 
 /*  footer  */
@@ -210,110 +259,147 @@ footer {
 
 /* Tablets - fonts  */
 @media screen and (max-width: 992px) {
-header h1 {
+  header h1 {
     padding: 10px 10px 10px 50px;
     font-size: 2.5em;
   }
-nav ul {
+
+  nav ul {
     margin-right: 20px;
   }
-nav ul li {
+
+  nav ul li {
     margin: 0 8px;
   }
-aside.menu {
-  padding: 0 20px 0 0;
+
+  aside.menu {
+    padding: 0 20px 0 0;
+  }
+
+  aside.menu h2 {
+    font-size: 2em;
+    margin: 10px 0;
+  }
+
+  /* decrease height of hero image */
+  .hero {
+    height: 200px;
+    background-position: left;
+  }
+
+  .hero h2 {
+    right: 40px;
+  }
+
+  /* changed background image size to cover */
+  .led-wall,
+  .calculator,
+  .pastel-puzzles,
+  .run-buddy {
+    background-size: cover;
+  }
+
+  .run-buddy {
+    background-position: top left;
+  }
+
+  /* changed content to stack in column */
+  .information ul {
+    padding: 0px 10px 20px 10px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-content: space-between;
+  }
+
+  .information ul li {
+    border-bottom: 1px solid #445976;
+    padding: 15px 0 4px 0;
+  }
 }
-aside.menu h2 {
-  font-size: 2em;
-  margin: 10px 0;
-}
-/* decrease height of hero image */
-.hero {
-  height: 200px;
-  background-position: left;
-}
-.hero h2 {
-  right: 40px;
-}
-/* changed background image size to cover */
-.led-wall, .calculator, .pastel-puzzles, .run-buddy {
-  background-size: cover;
-}
-.run-buddy {
-  background-position: top left;
-}
-/* changed content to stack in column */
-.information ul {
-  padding: 0px 10px 20px 10px;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-content: space-between;
-}
-.information ul li {
-  border-bottom: 1px solid #445976;
-  padding: 15px 0 4px 0;
-}
+
+@media screen and (max-width: 912px) {
+  .projects section a span h3 {
+    font-size: 1.3em;
+  }
 }
 
 /* Large smartphones */
 @media screen and (max-width: 768px) {
-header {
+  header {
     flex-direction: column;
-}
-header h1 {
-  padding: 10px 30px;
-}
-nav ul {
-  margin: 20px auto 10px;
-}
+  }
+
+  header h1 {
+    padding: 10px 30px;
+  }
+
+  nav ul {
+    margin: 20px auto 10px;
+  }
 }
 
 /* Small smartphones */
 @media screen and (max-width: 576px) {
-header {
-  flex-direction: column;
-}
-section.about, section.work, section.contact {
-  flex-direction: column;
-}
-header h1 {
-  padding: 10px 20px;
-}
-nav ul {
-  padding-inline-start: 0;
-  margin: 10px;
-}
-nav ul li {
-  padding: 5px;
-  margin: 7px;
-}
-nav a span {
-  display: none;
-}
-.hero {
-  background-position: center;
-}
-aside.menu h2 span {
-  display: contents;
-}
-aside.menu {
-  flex: 20%;
-  padding: 0 20px;
-  text-align: left;
-  border-bottom: 5px solid #445976;
-  border-right: none;
-  margin-bottom: 20px;
-  padding: 0px !important;
-}
-.projects section {
-  flex-direction: column;
-}
-.bio, .projects, .information {
- padding: 0;
-}
-.led-wall, .pastel-puzzles {
-  margin-right: 0px;
-}
+  header {
+    flex-direction: column;
+  }
+
+  section.about,
+  section.work,
+  section.contact {
+    flex-direction: column;
+  }
+
+  header h1 {
+    padding: 10px 20px;
+  }
+
+  nav ul {
+    padding-inline-start: 0;
+    margin: 10px;
+  }
+
+  nav ul li {
+    padding: 5px;
+    margin: 7px;
+  }
+
+  nav a span {
+    display: none;
+  }
+
+  .hero {
+    background-position: center;
+  }
+
+  aside.menu h2 span {
+    display: contents;
+  }
+
+  aside.menu {
+    flex: 20%;
+    padding: 0 20px;
+    text-align: left;
+    border-bottom: 5px solid #445976;
+    border-right: none;
+    margin-bottom: 20px;
+    padding: 0px !important;
+  }
+
+  .projects section {
+    flex-direction: column;
+  }
+
+  .bio,
+  .projects,
+  .information {
+    padding: 0;
+  }
+
+  .led-wall,
+  .pastel-puzzles {
+    margin-right: 0px;
+  }
 
 }
